--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,76 +1,75 @@
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
+cmake_minimum_required(VERSION 2.8.4)
 
-ADD_DEFINITIONS()
 
-LINK_DIRECTORIES()
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+project(motion_controller C)
 
-PROJECT(Odometry C)
-SET(SOURCE_EXTENSION c)
 
-SET(RTIDDSGEN $ENV{RTIMEHOME}/rtiddsgen/scripts/rtiddsgen)
-SET_PROPERTY(GLOBAL PROPERTY RULE_MESSAGES OFF)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-SET(IDL_SOURCE_C Odometry.idl)
 
-SET(IDL_GEN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/gen)
+set(RTIDDSGEN $ENV{RTIMEHOME}/rtiddsgen/scripts/rtiddsgen)
+set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 
-SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
-SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
+set(IDL_SOURCE_C ./idl/Engagement_t.idl)
 
-IF (NOT EXISTS gen)
+set(IDL_GEN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/gen)
+
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
+
+if(NOT EXISTS gen)
     EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory gen)
-ENDIF()
+endif()
 
-SET(RTI_LIB_PREFIX rti_me)
-SET(RTI_LIB_SUFFIX)
+set(RTI_LIB_PREFIX rti_me)
+set(RTI_LIB_SUFFIX)
 
-IF (NOT (DEFINED RTI_SHARED_LIB))
-    IF (${CMAKE_BUILD_TYPE} MATCHES "[Rr]elease")
-        SET(RTI_LIB_SUFFIX "z")
-        SET(RTI_DEBUG_BUILD FALSE)
+if(NOT (DEFINED RTI_SHARED_LIB))
+    if(${CMAKE_BUILD_TYPE} MATCHES "[Rr]elease")
+        set(RTI_LIB_SUFFIX "z")
+        set(RTI_DEBUG_BUILD FALSE)
         ADD_DEFINITIONS(-DNDEBUG)
-    ELSE()
-        SET(RTI_LIB_SUFFIX "zd")
-        SET(RTI_DEBUG_BUILD TRUE)
-    ENDIF()
-ELSE()
-    IF (${CMAKE_BUILD_TYPE} MATCHES "[Rr]elease")
-        SET(RTI_LIB_SUFFIX "")
-        SET(RTI_DEBUG_BUILD FALSE)
-        ADD_DEFINITIONS(-DNDEBUG)
-    ELSE()
-        SET(RTI_LIB_SUFFIX "d")
-        SET(RTI_DEBUG_BUILD TRUE)
-    ENDIF()
-ENDIF()
+    else()
+        set(RTI_LIB_SUFFIX "zd")
+        set(RTI_DEBUG_BUILD TRUE)
+    endif()
+else()
+    if(${CMAKE_BUILD_TYPE} MATCHES "[Rr]elease")
+        set(RTI_LIB_SUFFIX "")
+        set(RTI_DEBUG_BUILD FALSE)
+        add_definitions(-DNDEBUG)
+    else()
+        set(RTI_LIB_SUFFIX "d")
+        set(RTI_DEBUG_BUILD TRUE)
+    endif()
+endif()
 
-SET(MICRO_C_LIBS rti_me_rhsm${RTI_LIB_SUFFIX} 
+set(MICRO_C_LIBS rti_me_rhsm${RTI_LIB_SUFFIX} 
                  rti_me_whsm${RTI_LIB_SUFFIX} 
                  rti_me_discdpse${RTI_LIB_SUFFIX} 
                  rti_me_discdpde${RTI_LIB_SUFFIX} 
                  rti_me${RTI_LIB_SUFFIX}
                                                    )
 
-MESSAGE("RTIME_TARGET_NAME = ${RTIME_TARGET_NAME}")
-INCLUDE_DIRECTORIES(gen/ $ENV{RTIMEHOME}/include $ENV{RTIMEHOME}/include/rti_me)
-LINK_DIRECTORIES($ENV{RTIMEHOME}/lib/${RTIME_TARGET_NAME})
+message("RTIME_TARGET_NAME = ${RTIME_TARGET_NAME}")
+include_directories(gen/ $ENV{RTIMEHOME}/include $ENV{RTIMEHOME}/include/rti_me)
+link_directories($ENV{RTIMEHOME}/lib/${RTIME_TARGET_NAME})
 
-FOREACH(idl ${IDL_SOURCE_C})
-    GET_FILENAME_COMPONENT(filename ${idl} NAME)
-    STRING(REGEX REPLACE "\\.idl" "" basename ${filename})
-    LIST(APPEND IDL_GEN_C ${IDL_GEN_ROOT}/${basename}.${SOURCE_EXTENSION}
-                          ${IDL_GEN_ROOT}/${basename}Plugin.${SOURCE_EXTENSION}
-                          ${IDL_GEN_ROOT}/${basename}Support.${SOURCE_EXTENSION})
+foreach(idl ${IDL_SOURCE_C})
+    get_filename_component(filename ${idl} NAME)
+    string(REGEX REPLACE "\\.idl" "" basename ${filename})
+    list(APPEND IDL_GEN_C ${IDL_GEN_ROOT}/${basename}.c
+                          ${IDL_GEN_ROOT}/${basename}Plugin.c
+                          ${IDL_GEN_ROOT}/${basename}Support.c)
                           
-    LIST(APPEND IDL_GEN_H ${IDL_GEN_ROOT}/${basename}.h
+    list(APPEND IDL_GEN_H ${IDL_GEN_ROOT}/${basename}.h
                           ${IDL_GEN_ROOT}/${basename}Plugin.h  
                           ${IDL_GEN_ROOT}/${basename}Support.h)
                           
-    ADD_CUSTOM_COMMAND(OUTPUT ${IDL_GEN_C} ${IDL_GEN_H} 
+    add_custom_command(OUTPUT ${IDL_GEN_C} ${IDL_GEN_H} 
                        COMMAND ${RTIDDSGEN} -verbosity 1 -language C -micro 
                                -replace 
                                -d ${IDL_GEN_ROOT}/. ${CMAKE_CURRENT_SOURCE_DIR}/${idl}
@@ -78,19 +77,25 @@ FOREACH(idl ${IDL_SOURCE_C})
                        COMMENT "Regeneration type support plugin from ${idl}"
     )    
     SET_SOURCE_FILES_PROPERTIES(${IDL_GEN_C} ${IDL_GEN_H} PROPERTIES GENERATED 1)
-ENDFOREACH()
+endforeach()
 
-ADD_EXECUTABLE(Odometry_publisher
-               ${CMAKE_CURRENT_SOURCE_DIR}/Odometry_publisher.${SOURCE_EXTENSION}
-               ${CMAKE_CURRENT_SOURCE_DIR}/OdometryApplication.${SOURCE_EXTENSION} 
-               ${CMAKE_CURRENT_SOURCE_DIR}/OdometryApplication.h 
+add_executable(motion_controller
+               ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
+            #    ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c 
+            #    ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
+                                             ${IDL_GEN_C} ${IDL_GEN_H})
+# add_executable(motion_controller_publisher
+#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_t_publisher.c
+#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c 
+#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
+#                                              ${IDL_GEN_C} ${IDL_GEN_H})
+
+add_executable(motion_controller_subscriber 
+               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_t_subscriber.c
+               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c
+               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
                                              ${IDL_GEN_C} ${IDL_GEN_H})
 
-ADD_EXECUTABLE(Odometry_subscriber 
-               ${CMAKE_CURRENT_SOURCE_DIR}/Odometry_subscriber.${SOURCE_EXTENSION}
-               ${CMAKE_CURRENT_SOURCE_DIR}/OdometryApplication.${SOURCE_EXTENSION}
-               ${CMAKE_CURRENT_SOURCE_DIR}/OdometryApplication.h 
-                                             ${IDL_GEN_C} ${IDL_GEN_H})
-
-TARGET_LINK_LIBRARIES(Odometry_publisher  ${MICRO_C_LIBS} ${PLATFORM_LIBS})
-TARGET_LINK_LIBRARIES(Odometry_subscriber ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+# target_link_libraries(motion_controller_publisher  ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+target_link_libraries(motion_controller_subscriber ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+target_link_libraries(motion_controller ${MICRO_C_LIBS} ${PLATFORM_LIBS})
