first prototype - motion_controller to throttle_system on throttle_cmd_topic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,8 @@
-
 cmake_minimum_required(VERSION 2.8.4)
-
-
 
 project(motion_controller C)
 
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 
 set(RTIDDSGEN $ENV{RTIMEHOME}/rtiddsgen/scripts/rtiddsgen)
 set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
@@ -21,7 +16,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARG
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/objs/${RTIME_TARGET_NAME})
 
 if(NOT EXISTS gen)
-    EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory gen)
+    execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory gen)
 endif()
 
 set(RTI_LIB_PREFIX rti_me)
@@ -31,7 +26,7 @@ if(NOT (DEFINED RTI_SHARED_LIB))
     if(${CMAKE_BUILD_TYPE} MATCHES "[Rr]elease")
         set(RTI_LIB_SUFFIX "z")
         set(RTI_DEBUG_BUILD FALSE)
-        ADD_DEFINITIONS(-DNDEBUG)
+        add_definitions(-DNDEBUG)
     else()
         set(RTI_LIB_SUFFIX "zd")
         set(RTI_DEBUG_BUILD TRUE)
@@ -50,7 +45,6 @@ endif()
 set(MICRO_C_LIBS rti_me_rhsm${RTI_LIB_SUFFIX} 
                  rti_me_whsm${RTI_LIB_SUFFIX} 
                  rti_me_discdpse${RTI_LIB_SUFFIX} 
-                 rti_me_discdpde${RTI_LIB_SUFFIX} 
                  rti_me${RTI_LIB_SUFFIX}
                                                    )
 
@@ -76,26 +70,16 @@ foreach(idl ${IDL_SOURCE_C})
                        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${idl}
                        COMMENT "Regeneration type support plugin from ${idl}"
     )    
-    SET_SOURCE_FILES_PROPERTIES(${IDL_GEN_C} ${IDL_GEN_H} PROPERTIES GENERATED 1)
+    set_source_files_properties(${IDL_GEN_C} ${IDL_GEN_H} PROPERTIES GENERATED 1)
 endforeach()
 
 add_executable(motion_controller
                ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
-            #    ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c 
-            #    ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
-                                             ${IDL_GEN_C} ${IDL_GEN_H})
-# add_executable(motion_controller_publisher
-#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_t_publisher.c
-#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c 
-#                ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
-#                                              ${IDL_GEN_C} ${IDL_GEN_H})
-
-add_executable(motion_controller_subscriber 
-               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_t_subscriber.c
-               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.c
-               ${CMAKE_CURRENT_SOURCE_DIR}/Engagement_tApplication.h 
                                              ${IDL_GEN_C} ${IDL_GEN_H})
 
-# target_link_libraries(motion_controller_publisher  ${MICRO_C_LIBS} ${PLATFORM_LIBS})
-target_link_libraries(motion_controller_subscriber ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+add_executable(throttle_system 
+               ${CMAKE_CURRENT_SOURCE_DIR}/throttle_system.c
+                                             ${IDL_GEN_C} ${IDL_GEN_H})
+
+target_link_libraries(throttle_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
 target_link_libraries(motion_controller ${MICRO_C_LIBS} ${PLATFORM_LIBS})
