file structure refactor / cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,12 +74,18 @@ foreach(idl ${IDL_SOURCE_C})
 endforeach()
 
 add_executable(motion_controller
-               ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
-                                             ${IDL_GEN_C} ${IDL_GEN_H})
+        ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller_listeners.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
+        ${IDL_GEN_C} 
+        ${IDL_GEN_H})
 
-add_executable(throttle_system 
-               ${CMAKE_CURRENT_SOURCE_DIR}/throttle_system.c
-                                             ${IDL_GEN_C} ${IDL_GEN_H})
+add_executable(velocity_system 
+        ${CMAKE_CURRENT_SOURCE_DIR}/velocity_system.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/velocity_system_listeners.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
+        ${IDL_GEN_C} 
+        ${IDL_GEN_H})
 
-target_link_libraries(throttle_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+target_link_libraries(velocity_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
 target_link_libraries(motion_controller ${MICRO_C_LIBS} ${PLATFORM_LIBS})
