--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(RTIDDSGEN $ENV{RTIMEHOME}/rtiddsgen/scripts/rtiddsgen)
 set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 
-set(IDL_SOURCE_C ./idl/Engagement_t.idl)
+set(IDL_SOURCE_C 
+    ./idl/Engagement_t.idl
+    ./idl/Angle_t.idl 
+)
 
 set(IDL_GEN_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/gen)
 
@@ -52,11 +55,12 @@ else()
     endif()
 endif()
 
-set(MICRO_C_LIBS rti_me_rhsm${RTI_LIB_SUFFIX} 
-                 rti_me_whsm${RTI_LIB_SUFFIX} 
-                 rti_me_discdpse${RTI_LIB_SUFFIX} 
-                 rti_me${RTI_LIB_SUFFIX}
-                                                   )
+set(MICRO_C_LIBS 
+    rti_me_rhsm${RTI_LIB_SUFFIX} 
+    rti_me_whsm${RTI_LIB_SUFFIX} 
+    rti_me_discdpse${RTI_LIB_SUFFIX} 
+    rti_me${RTI_LIB_SUFFIX}
+)
 
 message("RTIME_TARGET_NAME = ${RTIME_TARGET_NAME}")
 include_directories(gen/ $ENV{RTIMEHOME}/include $ENV{RTIMEHOME}/include/rti_me)
@@ -64,38 +68,54 @@ link_directories($ENV{RTIMEHOME}/lib/${RTIME_TARGET_NAME})
 
 foreach(idl ${IDL_SOURCE_C})
     get_filename_component(filename ${idl} NAME)
+    message("${filename}")
     string(REGEX REPLACE "\\.idl" "" basename ${filename})
-    list(APPEND IDL_GEN_C ${IDL_GEN_ROOT}/${basename}.c
-                          ${IDL_GEN_ROOT}/${basename}Plugin.c
-                          ${IDL_GEN_ROOT}/${basename}Support.c)
-                          
-    list(APPEND IDL_GEN_H ${IDL_GEN_ROOT}/${basename}.h
-                          ${IDL_GEN_ROOT}/${basename}Plugin.h  
-                          ${IDL_GEN_ROOT}/${basename}Support.h)
-                          
-    add_custom_command(OUTPUT ${IDL_GEN_C} ${IDL_GEN_H} 
+    set(THIS_PASS_C 
+            ${IDL_GEN_ROOT}/${basename}.c
+            ${IDL_GEN_ROOT}/${basename}Plugin.c
+            ${IDL_GEN_ROOT}/${basename}Support.c
+    )
+    set(THIS PASS_H 
+            ${IDL_GEN_ROOT}/${basename}.h
+            ${IDL_GEN_ROOT}/${basename}Plugin.h  
+            ${IDL_GEN_ROOT}/${basename}Support.h
+    )
+    add_custom_command(OUTPUT ${THIS_PASS_C} ${THIS_PASS_H} 
                        COMMAND ${RTIDDSGEN} -verbosity 1 -language C -micro 
                                -replace 
                                -d ${IDL_GEN_ROOT}/. ${CMAKE_CURRENT_SOURCE_DIR}/${idl}
                        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${idl}
                        COMMENT "Regeneration type support plugin from ${idl}"
-    )    
+    )                   
+    list(APPEND IDL_GEN_C ${THIS_PASS_C})   
+    list(APPEND IDL_GEN_H ${THIS_PASS_H})
     set_source_files_properties(${IDL_GEN_C} ${IDL_GEN_H} PROPERTIES GENERATED 1)
 endforeach()
 
 add_executable(motion_controller
-        ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller_callbacks.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
-        ${IDL_GEN_C} 
-        ${IDL_GEN_H})
+    ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/motion_controller_callbacks.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
+    ${IDL_GEN_C} 
+    ${IDL_GEN_H}
+)
 
 add_executable(longitudinal_system 
-        ${CMAKE_CURRENT_SOURCE_DIR}/longitudinal_system.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/longitudinal_system_callbacks.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
-        ${IDL_GEN_C} 
-        ${IDL_GEN_H})
+    ${CMAKE_CURRENT_SOURCE_DIR}/longitudinal_system.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/longitudinal_system_callbacks.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
+    ${IDL_GEN_C} 
+    ${IDL_GEN_H}
+)
 
-target_link_libraries(longitudinal_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+add_executable(lateral_system 
+    ${CMAKE_CURRENT_SOURCE_DIR}/lateral_system.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/lateral_system_callbacks.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/common_utils.c
+    ${IDL_GEN_C} 
+    ${IDL_GEN_H}
+)
+
 target_link_libraries(motion_controller ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+target_link_libraries(longitudinal_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
+target_link_libraries(lateral_system ${MICRO_C_LIBS} ${PLATFORM_LIBS})
